--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,10 @@
     "react": "^18.2.0",
     "react-clickout-ts": "^2023.6.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.21.2",
+    "react-time-picker": "^6.6.0",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.1"
   },
